# specs

./: CHANGELOG.md  Makefile  README.md
.github/: dependabot.yml
definitions/: features.toml  fields.toml  info_object_meta.toml  info_storage_meta.toml  infos.hcl  operations.hcl  operations.toml  pairs.hcl  pairs.toml
go/: bindata.go  build.go  build_test.go  go.mod  go.sum  parse.go  spec.go  tools.go
rfcs/: 0-add-create-dir-operation.md  0-add-create-directory.md  0-add-create-link-operation.md  0-add-object-mode-check-for-operations.md  0-add-object-mode-pair.md  0-add-serverinternel-and-requestthrottled-errors.md  0-better-error-handing.md  0-commit-append.md  0-community-organization.md  0-example.md  0-feature-gates.md  0-idempotent-delete.md  0-local-function-metadata.md  0-object-mode.md  0-parse-pairs-from-string.md  0-redesign-features.md  0-remove-segment.md  0-segment-api-redesign.md  0-segment.md  0-service-output-template.md  0-service-registry.md  0-split-specs.md  0-trim-service-pair-prefix.md  0-turn-pair-expire-into-duration.md  0-unify-list-operation.md  0-unify-object-metadata.md  0-update-rfc-format-and-process.md  0-write-behavior-consistency.md  105-trim-service-pair-prefix.md  109-redesign-features.md  111-add-service-metadata-in-storage-metadata.md  111-add-system-metadata-in-storage-metadata.md  117-rename-service-to-system-as-the-opposite-to-global.md  118-update-rfc-format-and-process.md  12-support-both-directory-and-prefix-based-list.md  (+51 more)
rust/: Cargo.toml
rust/src/: definitions  lib.rs  parse.rs
rust/testdata/: service.toml
(+5 files in other folders)
