[package]
name = "aos-specs"
version = "0.1.1"
authors = ["Xuanwo <github@xuanwo.io>"]
edition = "2018"
description = "AOS specs for rust"
license = "Apache-2.0"
documentation = "https://docs.rs/aos-specs"
repository = "https://github.com/aos-dev/specs"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.38"
lazy_static = "1.4.0"
