[package]
name = "beyondstorage-specs"
version = "0.1.2"
authors = ["Xuanwo <github@xuanwo.io>"]
edition = "2018"
description = "Beyond Storage specs for rust"
license = "Apache-2.0"
documentation = "https://docs.rs/beyondstorage-specs"
repository = "https://github.com/beyondstorage/specs"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.41"
lazy_static = "1.4.0"
